# SigmaDelta

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.org
qml/: RingMenu.qml  SettingsDialog.qml  main.qml  qml.qrc
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/qmltests/: CMakeLists.txt  tst_QmlTestTest.qml
